优化Neyman采样逻辑，提升采样策略性能